# deppy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  A_NON_COHOMOLOGISTS_GUIDE.md  CLAUDE.md  CODE_EXPLORATION_INDEX.md  DEPPY_CODEBASE_EXPLORATION.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  LICENSE  MODULE_ARCHITECTURE.txt  PACKAGE_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_SSA_LINEAGE.md  README.md  REUSABLE_CODE_MAPPING.md  REUSABLE_CODE_SUMMARY.md  REUSE_INVENTORY.md  SSA_LINEAGE_IMPLEMENTATION_GUIDE.md  abstract.txt  audit_part1.txt  background_slides.aux  background_slides.nav  background_slides.tex  background_slides.vrb  comet_verified.py  decorated_geometry.json  decorated_geometry.lean  demo_equiv_f.py  demo_factorial_iter.py  demo_fib_correct.py  demo_fib_offbyone.py  demo_product.py  demo_range_a.py  demo_range_b.py  demo_sort_asc.py  demo_sort_desc.py  demo_sum.py  dependent_typing_as_optimization copy.tex  (+37 more)
.github/: copilot-instructions.md
agent/: __init__.py  cli.py  code_generator.py  intent_oracle.py  orchestrator.py  project_assembler.py  verification_loop.py
benchmarks/: bug_benchmark_utils.py  github_scanner.py  hard_equiv_suite.py  hard_equiv_suite_2.py  hard_spec_suite.py  large_bug_suite.py  large_equiv_suite.py  large_spec_suite.py  run_all_benchmarks.py  run_hard_equiv_benchmarks.py  run_large_benchmarks.py
cctt_monograph/: AGENT_CONTEXT.md  compile_chapter.sh  main.tex  main.tex.agents_backup  main.tex.bak  main.toc  main_v1.tex  slides.nav  slides.tex  slides.vrb  synergies.tex  synergies.toc
cohomological_typing_for_absolutely_everything/: main.aux  main.out  main.tex  main.toc
demo/: bubble_sort.py  builtin_sort.py  factorial_iterative.py  factorial_recursive.py  fibonacci.py  fibonacci_bug.py
deppy/: __init__.py  __main__.py  async_verify.py  classical.py  cli.py  concurrency.py  config.py  decorators.py  equivalence.py  ghost.py  heap.py  homotopy.py  patching.py  separation.py  sidecar.py  tactics.py  types.py  z3_bridge.py
docs/: _sidebar_template.html  app.js  decorated_sidecar.md  index.html  intro.html  structure.html  styles.css
examples/: __init__.py  bst_proof.py  bst_z3_demo.py  catalog.py  constructor_usage_bug.py  decorated_geometry.py  dependent_sigma_witness.py  heap_field_mismatch.py  heap_proof.py  heap_protocol_branch_bug.py  mixed_mode_sort_equivalence.py  native_box_ok.py  protocol_mismatch.py  pytorch_long_capability_audit.py  pytorch_multi_pack_unannotated.py  pytorch_semantic_showcase.py  pytorch_shape_bug_from_tensorguard.py  pytorch_sort_bad_return.py  pytorch_sort_proof_goal.py  pytorch_unannotated_sort_inference_bug.py  return_type_mismatch.py  safe_guarded_head.py  theorem_carrying_benchmark.proof
killer/: plan.md  (+1 more)
lean/: C4.lean  (+2 more)
(+3174 files in other folders)
