[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deppy"
version = "2.0.0"
description = "Dependent typing as optimization for Python via sheaf-descent semantics"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
