[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deppy"
version = "2.0.0"
description = "Dependent typing as optimization for Python via sheaf-descent semantics"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]
lsp = [
    "pygls>=1.3",
    "lsprotocol>=2023.0.1",
]

[project.scripts]
deppy = "deppy.cli.main:cli_entry_point"
deppy-lsp = "deppy.lsp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
